# cupfm

./: .gitignore  404.html  CHANGELOG.md  README.md  index.html  pyproject.toml  sitemap.xml
api/: index.html
assets/images/: summary_output.txt
changelog/: index.html
docs/: mkdocs.yml
docs/docs/: api.md  changelog.md  examples.md  getting-started.md  index.md  theory.md
docs/docs/assets/: custom.css
docs/docs/assets/images/: summary_output.txt
examples/: index.html
getting-started/: index.html
notebooks/: cupfm_tutorial.ipynb
pycupfm/: __init__.py  core.py  datasets.py  estimators.py  export.py  factors.py  kernels.py  plotting.py  results.py  simulation.py  validation.py
search/: search_index.json
theory/: index.html
