[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycupfm"
version = "1.0.0"
description = "Panel Cointegration with Common Factors — CupFM, CupBC, Bai FM, LSDV estimators (Bai, Kao & Ng 2009)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Dr. Merwan Roudane", email = "merwanroudane920@gmail.com"},
]
keywords = [
    "panel cointegration",
    "common factors",
    "CupFM",
    "CupBC",
    "econometrics",
    "panel data",
    "factor models",
    "Bai Kao Ng",
    "cross-sectional dependence",
    "FMOLS",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "openpyxl>=3.0",
]

[project.urls]
Homepage = "https://github.com/merwanroudane/cupfm"
Documentation = "https://merwanroudane.github.io/cupfm/"
Repository = "https://github.com/merwanroudane/cupfm"
Issues = "https://github.com/merwanroudane/cupfm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pycupfm*"]
